chore: sonar issues high and medium - part 1